# iota-streams-node

./: .travis.yml  LICENSE  README.md  package-lock.json  package.json
lib/: index.js
native/: Cargo.toml  build.rs
native/src/: lib.rs
native/src/iotasubscriber/: subscribe.rs
